# Stela-app

./: .dockerignore  .env.example  .gitignore  .npmrc  ARCHITECTURE.md  CLAUDE.md  QUALITY.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.claude/agents/: auditor.md  bot.md  contracts.md  frontend.md  indexer.md
.forge/handoffs/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-008.md  task-009.md  task-010.md  task-011.md
.forge/reports/: sub-judge-task-001.json  sub-judge-task-002.json  sub-judge-task-003.json  (+8 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
PRPs/: markets-trade-bot-upgrade.md  ui-streamline-best-trades.md
docs/: README.md  api.md  architecture.md  d1-schema.md  deployment.md  design-system.md  flows.md  frontend.md  match-detection.md  workers.md
scripts/: e2e-test.mjs  sync-abi.mjs
services/matching-engine/: .env.example  Cargo.toml
services/matching-engine/migrations/: 001_create_orders.sql
services/matching-engine/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
services/matching-engine/src/db/: queries.rs
services/matching-engine/src/models/: mod.rs  order_record.rs  signed_order.rs  taker_intent.rs
services/matching-engine/src/routes/: health.rs  match_intent.rs  mod.rs  orders.rs  webhooks.rs
services/matching-engine/src/services/: mod.rs  order_store.rs  scoring.rs  signature.rs
services/matching-engine/tests/: scoring_tests.rs
work_logs/: task-008.jsonl
(+711 files in other folders)
